--- a/client/Components/QuickAdd/QuickAdd.css
+++ b/client/Components/QuickAdd/QuickAdd.css
@@ -8,6 +8,7 @@
   border-bottom: 3px solid #286A9C;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   z-index: 50;
+  overflow-y: auto;
 }
 
 .type-selection {
