--- a/client/Components/EncounterSummary/EncounterSummary.css
+++ b/client/Components/EncounterSummary/EncounterSummary.css
@@ -10,9 +10,10 @@
 
 .summary-top {
   width: 90%;
-  padding-left: 130px;
+  position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 25px;
 }
 
@@ -26,6 +27,8 @@
 }
 
 .summary-top-buttons {
+  position: absolute;
+  right: 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
