--- a/client/index.css
+++ b/client/index.css
@@ -120,6 +120,7 @@
   position: absolute;
   left: 40px;
   top: 15px;
+  z-index: 50;
 }
 
 .close-btn {
@@ -179,14 +180,6 @@
   color: #13324A;
 }
 
-
-.medium-input {
-  width: 50px;
-  font-size: large;
-  font-weight: 700;
-  text-align: center;
-}
-
 /* Form stylings */
 .vertical-form {
   font-size: 15pt;
@@ -240,6 +233,25 @@
 .form-input {
   border: none;
   border-bottom: 0.125rem solid #13324A;
+}
+
+.medium-input {
+  width: 50px;
+  font-size: large;
+  font-weight: 700;
+  text-align: center;
+}
+
+.large-input {
+  min-width: 100%;
+  max-width: 100%;
+}
+
+.large-input textarea {
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 70px;
+  max-height: 150px;
 }
 
 .form-piece-underlined > .form-input {
@@ -345,20 +357,9 @@
     width: 105%;
     padding-left: .25rem;
   }
-
-  & .form-piece-textarea {
-    width: 60%;
-  }
   
   & .form-piece-textarea > form-piece {
     width: 100%
-  }
-  
-  & textarea.form-input  {
-    min-height: 40px;
-    max-height: 100px;
-    max-width: 100%;
-    min-width: 100%;
   }
 }
 
@@ -431,7 +432,8 @@
   background-color: #286A9C;
 }
 
-.new-sections {
+/* Breakdown styling */
+.breakdown {
   width: 75%;
   padding: 65px 20px 15px;
   margin: 10px 0 25px;
@@ -439,10 +441,18 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 10px;
   text-align: center;
   font-size: 16pt;
   border-bottom: 3px solid #286A9C;
   border-radius: 3px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
   background-color: #EBEBEB;
+}
+
+.large-breakdown-piece {
+  width: 100%;
+  padding: 0 10%;
+  margin: 10px 0;
 }
