--- a/client/Components/Campaigns/Campaigns.css
+++ b/client/Components/Campaigns/Campaigns.css
@@ -14,3 +14,17 @@
   align-items: center;
   background-color: #4B6982;
 }
+
+.encounter-short {
+  min-height: 50px;
+  width: 100%;
+  margin: 5px 0;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 3px solid #286A9C;
+}
