--- a/client/index.css
+++ b/client/index.css
@@ -8,16 +8,20 @@
   background-color: #DCEBF9;
 }
 
+* {
+  scrollbar-width: none;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-* {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+*::-webkit-scrollbar-button {
+  display: none;
 }
+
+
 
 .page-layout-1 {
   width: 100%;
@@ -396,8 +400,8 @@
 .dashboard {
   width: 100%;
   display: flex;
-  align-items: center;
   justify-content: space-evenly;
+  align-items: flex-start;
   flex-wrap: wrap;
   gap: 25px;
   margin: 25px 0;
@@ -432,6 +436,62 @@
   background-color: #286A9C;
 }
 
+/* extra selections */
+.extra-selections {
+  min-height: 200px;
+  max-height: 300px;
+  width: 40%;
+  overflow: auto;
+  padding: 65px 20px 10px;
+  gap: 15px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 16pt;
+  border-bottom: 3px solid #286A9C;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+  background-color: #EBEBEB;
+}
+
+.extra-selections-options {
+  width: 45%;
+  font-size: 18pt;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.extra-selections-options p {
+  text-align: center;
+  width: 85%;
+}
+
+.extra-selections-checkbox {
+  width: 20px;
+  height: 20px;
+  border: 0px;
+  font-size: 24pt;
+  cursor: pointer;
+  position: relative;
+  appearance: none;
+  border: 1px solid #286A9C;
+}
+
+.extra-selections-checkbox:checked {
+  color: white;
+  background-color: #286A9C;
+}
+
+.extra-selections-checkbox:checked::before {
+  content: "✓";
+  left: -3px;
+  top: -10px;
+  position: absolute;
+}
+
 /* Breakdown styling */
 .breakdown {
   width: 75%;
@@ -447,12 +507,38 @@
   font-size: 16pt;
   border-bottom: 3px solid #286A9C;
   border-radius: 3px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  background-color: #EBEBEB;
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1); */
 }
 
 .large-breakdown-piece {
   width: 100%;
   padding: 0 10%;
   margin: 10px 0;
+}
+
+/* summary pages styling */
+.summary-top {
+  width: 90%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
+
+.summary-base-info {
+  height: 200px;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.summary-top-buttons {
+  position: absolute;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
