--- a/client/index.css
+++ b/client/index.css
@@ -239,11 +239,16 @@
   border-bottom: 0.125rem solid #13324A;
 }
 
-.medium-input {
+.small-input {
   width: 50px;
   font-size: large;
   font-weight: 700;
   text-align: center;
+}
+
+.medium-input {
+  min-width: 550px;
+  max-width: 550px;
 }
 
 .large-input {
@@ -263,8 +268,8 @@
   color: #EBEBEB;
 }
 .form-piece-filled > .form-input {
-  color: black;
   background-color: #13324A30;
+  color: black;
 }
 
 .form-label {
@@ -280,20 +285,25 @@
   color: #13324A;
 }
 
-.form-input:hover, option {
+.form-piece:hover .form-input {
   background-color: #286A9C60;
 }
 .form-input:focus, .form-select:focus {
   outline: none;
-  border-color: #3C9EE8;
+  background-color: #286A9C40;
+  border: .1rem solid #13324A;
+  border-bottom: 0.125rem solid #13324A;
 }
 .form-input:focus + .form-label{
-  color: #3C9EE8;
+  color: #286A9C;
 }
 .form-input:focus + .form-label,
 .form-input:valid:not(.empty-input) + .form-label {
-  top: 0;
-  font-size: 0.9375rem;
+  top: 2.5px;
+  font-size: 0.8375rem;
+}
+.form-piece-underlined > .form-input:focus + .form-label {
+  color: #A4D1F4;
 }
 
 /* Form sizes setup */
@@ -492,33 +502,9 @@
   position: absolute;
 }
 
-/* Breakdown styling */
-.breakdown {
-  width: 75%;
-  padding: 65px 20px 15px;
-  margin: 10px 0 25px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  gap: 10px;
-  text-align: center;
-  font-size: 16pt;
-  border-bottom: 3px solid #286A9C;
-  border-radius: 3px;
-  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1); */
-}
-
-.large-breakdown-piece {
-  width: 100%;
-  padding: 0 10%;
-  margin: 10px 0;
-}
-
-/* summary pages styling */
-.summary-top {
-  width: 90%;
+/* breakdown pages styling */
+.breakdown-top {
+  width: 80%;
   position: relative;
   display: flex;
   align-items: center;
@@ -526,19 +512,122 @@
   gap: 25px;
 }
 
-.summary-base-info {
-  height: 200px;
-  width: 70%;
+.breakdown-base-info {
+  min-height: 125px;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
 
-.summary-top-buttons {
+.breakdown-top-buttons {
   position: absolute;
   right: 0;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+/* Breakdown styling */
+.breakdown {
+  width: 85%;
+  padding: 55px 20px 15px;
+  margin: 10px 0 25px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 10px;
+  font-size: 16pt;
+  border-bottom: 3px solid #286A9C;
+  border-radius: 3px;
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1); */
+}
+
+.breakdown-head {
+  height: 40px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #EBEBEB;
+  background-color: #286A9C;
+}
+
+.breakdown-piece {
+  width: fit-content;
+  position: relative;
+  padding: 20px 10px 0;
+  margin: 10px 0;
+}
+
+.large-breakdown-piece {
+  max-width: 90%;
+  margin: 10px 5%;
+}
+
+.breakdown-label {
+  position: absolute;
+  top: 2.5px;
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.breakdown-text {
+  min-width: 200px;
+}
+
+.large-breakdown-piece > .breakdown-text {
+  min-width: 0;
+}
+
+.breakdown-break {
+  width: 90%;
+  margin: 0 5%;
+  border-bottom: 2px solid #286A9C;
+}
+
+
+/* info list styling */
+.info-list-group {
+  width: 100%;
+  justify-content: space-evenly;
+  display: flex;
+  margin: 20px 0px 25px;
+}
+
+.info-list-wrapper {
+  width: 45%;
+  height: fit-content;
+  max-height: 400px;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  position: relative;
+  gap: 10px;
+  padding: 50px 0px 5px;
+}
+
+.info-list-head {
+  height: 40px;
+  width: 100%;
+  color: rgb(235, 235, 235);
+  background-color: rgb(40, 106, 156);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  top: 0px;
+}
+
+.info-list-item {
+  min-height: 30px;
+  width: 100%;
+  margin: 5px 0px;
+  padding: 0px 20px;
+  border-bottom: 3px solid rgb(40, 106, 156);
 }
