--- a/client/index.css
+++ b/client/index.css
@@ -104,6 +104,13 @@
   margin: 5px;
 }
 
+.btn-type-4 {
+  margin: auto;
+  font-size: 12pt;
+  font-weight: 500;
+  padding: 3px 8px;
+}
+
 .btn-color-1 {
   background-color: #3385C4;
 }
@@ -127,10 +134,18 @@
   z-index: 50;
 }
 
+.back-btn-2 {
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  z-index: 50;
+}
+
 .close-btn {
   position: absolute;
-  top: 50px;
+  top: 8px;
   right: 10px;
+  z-index: inherit;
 }
 
 .enable-pointer {
@@ -609,25 +624,29 @@
   display: flex;
   position: relative;
   gap: 10px;
-  padding: 50px 0px 5px;
+  padding: 45px 0px 5px;
+}
+
+.info-list-full {
+  width: 70%;
 }
 
 .info-list-head {
   height: 40px;
   width: 100%;
-  color: rgb(235, 235, 235);
-  background-color: rgb(40, 106, 156);
   justify-content: center;
   align-items: center;
   display: flex;
   position: absolute;
   top: 0px;
+  color: rgb(235, 235, 235);
+  background-color: rgb(40, 106, 156);
 }
 
 .info-list-item {
   min-height: 30px;
   width: 100%;
   margin: 5px 0px;
-  padding: 0px 20px;
+  padding: 0px 20px 5px;
   border-bottom: 3px solid rgb(40, 106, 156);
 }
