--- a/client/Components/CreationForms/CreationForms.css
+++ b/client/Components/CreationForms/CreationForms.css
@@ -8,105 +8,32 @@
   align-items: center;
 }
 
-#new-encounter-nav {
-  width: 90%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-#selection-progress-div {
-  height: 75px;
-  width: 60%;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-}
-
-.progress-bar {
-  height: 10px;
-  width: calc(100% - 60px);
-  position: absolute;
-  left: 30px;
-  top: 20px;
-  z-index: 1;
-  transition: 0.7s ease;
-  background-color: grey;
-}
-
-#progress-bar {
-  z-index: 2;
-  background-color: #3C9EE8;
-}
-
-.empty {
-  width: 0;
-}
-
-.third {
-  width: calc(33% - 15px);
-}
-
-.two-third {
-  width: calc(66% - 35px);
-}
-
-.end {
-  width: calc(100% - 60px);
-}
-
-.checkpoint {
-  height: 75px;
-  width: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  cursor: pointer;
-  z-index: 3;
-}
-
-.circle {
-  height: 30px;
-  width: 30px;
-  padding-top: 2px;
-  padding-right: 1px;
-  border: 5px solid grey;
-  border-radius: 50%;
-  color: #DCEBF9;
-  font-size: 18pt;
-  text-align: center;
-  background-color: #DCEBF9;
-}
-
-#current {
-  border-color: #3C9EE8;
-}
-
-.complete {
-  color: green;
-  border-color: green;
-}
-
 .new-encounter-selections {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
   align-items: flex-start;
+}
+
+.create-new-char-form-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.36);
+  z-index: 52;
 }
 
 .create-new-char-form {
   height: 400px;
   width: 600px;
+  position: relative;
   padding-top: 95px;
-  position: absolute;
-  top: 50px;
   background-color: #EBEBEB;
   border-bottom: 3px solid #286A9C;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  z-index: 50;
+  z-index: 55;
   overflow-y: auto;
 }
 
@@ -210,4 +137,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.new-campaign-encounter {
+  width: 90%;
+}
+
+.new-campaign-encounter-head {
+  height: 55px;
+  pointer-events: none;
+  color: #EBEBEB;
+  border: none;
+  background-color: #474747;
+}
+
+.new-campaign-encounter-row {
+  min-height: 50px;
+  padding: 5px 12px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 2fr 2fr;
+  grid-auto-columns: 1fr;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  font-size: 16pt;
+  font-weight: 600;
+  border-bottom: 3px solid #286A9C;
+  font-family: 'MedievalSharp', sans-serif;
+}
+
+.new-campaign-encounter-row td, .new-campaign-encounter-row th {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
